# kanachan

./: .dockerignore  .gitignore  CMakeLists.txt  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docker-image.yml
kanachan/: Dockerfile  constants.py  model_loader.py
kanachan/nn/: __init__.py  decode_converter.py  decoder.py  encoder.py  noisy_linear.py  qr_decoder.py  round_encoder.py  twin_q_actor.py
kanachan/simulation/: Dockerfile  run.py  run.sh
kanachan/training/bc/: Dockerfile  config.py  train.py  train.sh
kanachan/training/bert/: training.py
kanachan/training/core/: dataset.py
kanachan/training/core/bc/: data_iterator.py  data_loader.py
kanachan/training/core/config/: decoder.py  encoder.py
kanachan/training/core/eor/: data_iterator.py  data_loader.py  (+1 more)
kanachan/training/cql/: Dockerfile  README.md  config.py  train.py  train.sh
kanachan/training/eor2ranking/: Dockerfile  train.py
kanachan/training/ilql/: Dockerfile  config.py  qv_model.py  train.py  train.sh
kanachan/training/iql/: Dockerfile  config.py  iterator_adaptor.py  q_model.py  train.py  value_model.py
kanachan/training/ranking/: Dockerfile  config.py  train.py  train.sh
mjai.app/: Dockerfile  _kanachan.py  server.py
prerequisites/: Dockerfile
src/annotation/: Dockerfile  annotation.cpp  annotation.hpp  main.cpp  player_state.cpp  player_state.hpp
src/common/: CMakeLists.txt
src/simulation/: decision_maker.cpp  decision_maker.hpp  simulate.cpp  simulate.hpp  simulator.cpp  simulator.hpp
src/xiangting/: CMakeLists.txt
(+6 files in other folders)
